--- a/TiendaVirtualAlejandro/TiendaVirtualAlejandro.csproj
+++ b/TiendaVirtualAlejandro/TiendaVirtualAlejandro.csproj
@@ -191,6 +191,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\CarritoCompra.cs" />
     <Compile Include="Models\Cliente.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
@@ -210,6 +211,9 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Modelo.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Pedido.cs">
+      <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Producto.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
