--- a/TiendaVirtualAlejandro/Web.config
+++ b/TiendaVirtualAlejandro/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-TiendaVirtualAlejandro-20200222092450.mdf;Initial Catalog=aspnet-TiendaVirtualAlejandro-20200222092450;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="ModeloContainer" connectionString="metadata=res://*/Models.Modelo.csdl|res://*/Models.Modelo.ssdl|res://*/Models.Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\alem2\source\repos\TiendaVirtualAlejandro\TiendaTarde.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModeloContainer" connectionString="metadata=res://*/Models.Modelo.csdl|res://*/Models.Modelo.ssdl|res://*/Models.Modelo.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=D:\MiW-UPM\net\TiendaVirtualAlejandro\TiendaTarde.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
