--- a/TiendaVirtualAlejandro/TiendaVirtualAlejandro.csproj
+++ b/TiendaVirtualAlejandro/TiendaVirtualAlejandro.csproj
@@ -193,6 +193,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\CarritoCompra.cs" />
+    <Compile Include="Models\CarritoCompraModelBinder.cs" />
     <Compile Include="Models\Category.cs">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
@@ -369,6 +370,7 @@
     <Content Include="Views\Pedido\Edit.cshtml" />
     <Content Include="Views\Pedido\Index.cshtml" />
     <Content Include="Views\Cliente\MiPerfil.cshtml" />
+    <Content Include="Views\Pedido\MiCarrito.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
