Reubicación de bases de datos

--- a/TiendaVirtualAlejandro/TiendaVirtualAlejandro.csproj
+++ b/TiendaVirtualAlejandro/TiendaVirtualAlejandro.csproj
@@ -229,6 +229,14 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\TiendaVirtualAlejandro-Default.mdf" />
+    <Content Include="App_Data\TiendaVirtualAlejandro-Default_log.ldf">
+      <DependentUpon>TiendaVirtualAlejandro-Default.mdf</DependentUpon>
+    </Content>
+    <Content Include="App_Data\TiendaVirtualAlejandro.mdf" />
+    <Content Include="App_Data\TiendaVirtualAlejandro_log.ldf">
+      <DependentUpon>TiendaVirtualAlejandro.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -406,9 +414,7 @@
     </Content>
     <Content Include="Views\Pedido\EditCart.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
